Fix double scroll issue - handle modal scrolling individually

--- a/force-app/main/default/lwc/newProgramEngagement/newProgramEngagement.css
+++ b/force-app/main/default/lwc/newProgramEngagement/newProgramEngagement.css
@@ -2,6 +2,7 @@
     width: 100%;
     position: relative;
     overflow-x: hidden;
+    overflow-y: inherit;
     display: flex;
 }
 
